[package]
name = "jolly-actix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
log = "0.4.17"
env_logger = "0.10.0"
actix = "0.13.0"
actix-files = "0.6.2"
actix-cors = "0.6.4"
actix-ws = "0.2.5"
actix-web = "4.2.1"
actix-web-actors = "4.1.0"
serde = { version = "1.0.149", features = ["derive"] }
uuid = {version = "1.2.2", features = ["v4", "fast-rng", "serde"]}
enum-iterator = "1.2.0"